--- a/css/layout.css
+++ b/css/layout.css
@@ -12,7 +12,15 @@ body {
 }
 
 .container {
+    display: grid;
+    grid-template-columns: 1fr 200px 600px 200px 1fr;
     padding: 20px;
     border: 1px solid;
 }
+    .container > .short {
+        
+    }
+    .container > .long {
+
+    }
 
