--- a/css/custom.css
+++ b/css/custom.css
@@ -1,12 +1,45 @@
 /* basic */ /* bg - reiskia background */
 .bg-main-color {
-    background-color: #03A9;
+    background-color: var(--main-color);
 }
 
 /* hero */
-div.container {
+.hero.container {
     padding-bottom: 20px;
 }
+
+.hero > .short {
+    text-align: center;
+}
+
+    .hero img {
+        height: 30px;
+        margin-bottom: var(--big-gap);
+    }
+    .hero h1 {
+        display: inline-block;
+        width: 100%;
+        color: #000;
+        font-size: 60px;
+        line-height: 60px;
+        text-transform: uppercase;
+        font-weight: bold;
+        margin-bottom: var(--gap);
+    }
+    .hero p {
+        display: inline-block;
+        width: 100%;
+        color: #444;
+        font-size: 20px;
+        line-height: 25px;
+        margin-bottom: var(--big-gap);
+    }
+    .hero .clock {
+        margin-bottom: var(--big-gap);
+    }
+    .hero .form {
+        margin-bottom: var(--gap);
+    }
 
 /* main */
 
