--- a/css/variables.css
+++ b/css/variables.css
@@ -5,5 +5,6 @@ css'e kintamieji kuriami su 2 minusais priekyje */
     --gap: 20px;
     --big-gap: calc(2.5 * var(--gap));
     --main-color: #03A9;
+    --secondary-color: #EA1E63;
 }
 
