--- a/css/custom.css
+++ b/css/custom.css
@@ -73,6 +73,26 @@ footer.container {
     padding-top: 0;
     text-align: center;
 }
+
+footer > .long {
+    padding: 10px 0;
+    border-bottom: 1px solid #fff;
+    margin-bottom: 20px;
+}
+
+    footer .fa {
+        color: #fff;
+        font-size: 15px;
+        width: 36px;
+        height: 36px;
+        line-height: 36px;
+        text-align: center;
+        border-radius: 50%; 
+    }
+        footer .fa:hover {
+            background-color: #fff;
+            color: var(--main-color);
+        }
     footer a {
         color: #fff;
         text-decoration: none;
