--- a/css/mouse.css
+++ b/css/mouse.css
@@ -7,8 +7,8 @@
 }
 .mouse > .wheel {
     display: inline-block;
-    width: 60px;
-    height: 60px;
+    width: 15px;
+    height: 30px;
     background-color: #fff;
     margin-top: 40px;
     border-radius: 8px;
@@ -18,6 +18,7 @@
     /* background-image: url (../img/logo.png);
     background-size: contain;
 } */
+}
 
     .mouse > .wheel:hover {
         animation-play-state: paused;
@@ -25,12 +26,12 @@
 
 @keyframes scrolling {
     0% {
-        margin-top: 40px;
+        margin-top: 20px;
         background-color: #fff;
         /* width: 15px; 
         border-radius: 8px;
         opacity: 1; */
-        transform: rotate(0);
+        /* transform: rotate(0); */
 
     }
     /* 10% {
@@ -46,12 +47,12 @@
          margin-left: 50px;
     } */
     100% {
-        margin-top: 140px;
-        background-color: #fff;
+        margin-top: 120px;
+        background-color: #fff0;
         /* width: 30px; 
         border-radius: 15px;
         opacity: 0; */
-        transform: rotate(360deg);
+        /* transform: rotate(360deg); */
     }
 
 }
@@ -59,5 +60,6 @@
 
 /* scena
 aktoriai
+scenarijus
 laikas
 */
