--- a/css/progress-bar.css
+++ b/css/progress-bar.css
@@ -34,5 +34,24 @@
         display: inline-block;
         width: 90%;
         height: 100%;
-        background-color: #36f;
     }
+
+        .progress-bar > .bottom > .progress > .bar {
+            display: inline-block;
+            width: 100%;
+            height: 100%;
+            background-color: #36f;
+            animation-name: loading;
+            animation-duration: 2s;
+            animation-iteration-count: 1
+        }
+
+
+@keyframes loading {
+    0% {
+        width: 0;
+    }
+    100% {
+        width: 100%;
+    }
+}
