--- a/css/custom.css
+++ b/css/custom.css
@@ -41,8 +41,14 @@
         margin-bottom: var(--big-gap);
     }
     .hero .form {
-        margin-bottom: var(--gap);
+        width: 80%;
+        margin: 0 10% var(--gap);
     }
+        .hero .form > .input {
+            background-color: transparent;
+            color: #fff;
+            border-color: #fff;
+        }
 
 /* main */
 
@@ -57,7 +63,7 @@ main h2 {
 main p {
     font-size: 15px;
     line-height: 23px;
-    color: #777;
+    color: #666;
     margin-bottom: 20px;
 }
     main p > a {
@@ -67,6 +73,10 @@ main p {
         main p > a:hover {
             text-decoration: underline;
         }
+    main .form > button {
+        float: right;
+    }
+    
 
 /* footer */
 footer.container {
@@ -129,8 +139,21 @@ footer > .long {
         display: inline-block;
         width: 100%;
     }
-    footer p > span + span::before {
-        display: none;
+        footer p > span + span::before {
+            display: none;
+        }
+    .hero .form {
+        width: 100%;
+        margin: 0 0% var(--gap);
     }
 }
 
+@media (min-width: 1200px) {
+    main .form > .input.input {
+        width: 47%;
+        float: left;
+    }
+        main .form > .input.input + input.input {
+            margin-left: 6%;
+        }
+    }
