--- a/css/layout.css
+++ b/css/layout.css
@@ -20,7 +20,6 @@ body {
         grid-column: 3/4;
         /* 3/4 nurodo tarp kuriu eiluciu tekstas bus pastatytas. */
         }
-
     .container > .long {
         grid-column: 2/5;
         }
@@ -38,16 +37,13 @@ body {
             display: grid;
             grid-template-columns: 5fr 1fr 4fr;
         }
-            .container > .long.columns {
-                display: grid;
-                grid-template-columns: 5fr 1fr 4fr;
-            }
                 .container > .long.columns > .left {
                     grid-column: 1/2;
                 }
-                .container > long.columns > .right {
+                .container > .long.columns > .right {
                     grid-column: 3/4;
                 }
+
 @media (max-width: 1100px) {
     .container {
         grid-template-columns: 1fr 100px 600px 100px 1fr;
@@ -59,11 +55,11 @@ body {
     }
         .container > .short {
             grid-column: 2/3;
-            }
+        }
 
         .container > .long {
             grid-column: 2/3;
-            }
+        }
 }
 
 @media (max-width: 640px) {
@@ -72,9 +68,11 @@ body {
     }
         .container > .long.columns {
             grid-template-columns: 1fr;
+            gap: 40px;
         }
             .container > .long.columns > .right {
                 grid-column: 1/2;
+                
             }
 }
 
